--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <head>
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
+    <script src="https://kit.fontawesome.com/b8f6f13c30.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -66,12 +67,12 @@
 
                 <div class="field">
                     <i class="fa-solid fa-envelope"></i>
-                    <input type="text" placeholder="E-mail">
+                    <input type="email" placeholder="E-mail">
                 </div>
 
                 <div class="field">
                     <i class="fa-solid fa-lock"></i>
-                    <input type="text" placeholder="Password">
+                    <input type="password" placeholder="Password">
                 </div>
                 <p>Lost password <a href=""> Click here</a> </p>
             </div>
